--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -2,16 +2,25 @@
     Contatos
 </mat-toolbar>
 
-<form>
+<form [formGroup]="formulario" (ngSubmit)="submit()">
     <mat-form-field class="full-width">
         <mat-label>Nome:</mat-label>
-        <input matInput placeholder="Digite seu nome: ">
+        <input matInput placeholder="Digite seu nome: " formControlName="nome">
     </mat-form-field>
+
+    <div *ngIf="formulario.controls.nome.errors">
+        <div *ngIf="formulario.controls.nome.errors.required">Nome obrigatório!</div>
+    </div>
 
     <mat-form-field class="full-width">
         <mat-label>Email:</mat-label>
-        <input matInput placeholder="Digite seu email: ">
+        <input matInput placeholder="Digite seu email: " formControlName="email">    
     </mat-form-field>
 
-    <button mat-button color = "primary">Adicionar</button>
+    <div *ngIf="formulario.controls.email.errors">
+        <div *ngIf="formulario.controls.email.errors.required">Email obrigatório!</div>
+        <div *ngIf="formulario.controls.email.errors.email">Email inválido!</div>
+    </div>
+
+    <button [disabled]="!formulario.valid" mat-button color="primary">Adicionar</button>
 </form>
