--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -2,25 +2,33 @@
     Contatos
 </mat-toolbar>
 
-<form [formGroup]="formulario" (ngSubmit)="submit()">
-    <mat-form-field class="full-width">
-        <mat-label>Nome:</mat-label>
-        <input matInput placeholder="Digite seu nome: " formControlName="nome">
-    </mat-form-field>
+<mat-tab-group>
+    <mat-tab label="Todos"></mat-tab>
+    <mat-tab label="Novo">
+        <mat-card class="half-width">
+            <mat-card-title>Novo contato</mat-card-title>
+            <form [formGroup]="formulario" (ngSubmit)="submit()">
+                <mat-form-field class="full-width">
+                    <mat-label>Nome:</mat-label>
+                    <input matInput placeholder="Digite seu nome: " formControlName="nome">
+                </mat-form-field>
 
-    <div *ngIf="formulario.controls.nome.errors">
-        <div *ngIf="formulario.controls.nome.errors.required">Nome obrigatório!</div>
-    </div>
+                <div *ngIf="formulario.controls.nome.errors">
+                    <div *ngIf="formulario.controls.nome.errors.required">Nome obrigatório!</div>
+                </div>
 
-    <mat-form-field class="full-width">
-        <mat-label>Email:</mat-label>
-        <input matInput placeholder="Digite seu email: " formControlName="email">    
-    </mat-form-field>
+                <mat-form-field class="full-width">
+                    <mat-label>Email:</mat-label>
+                    <input matInput placeholder="Digite seu email: " formControlName="email">
+                </mat-form-field>
 
-    <div *ngIf="formulario.controls.email.errors">
-        <div *ngIf="formulario.controls.email.errors.required">Email obrigatório!</div>
-        <div *ngIf="formulario.controls.email.errors.email">Email inválido!</div>
-    </div>
+                <div *ngIf="formulario.controls.email.errors">
+                    <div *ngIf="formulario.controls.email.errors.required">Email obrigatório!</div>
+                    <div *ngIf="formulario.controls.email.errors.email">Email inválido!</div>
+                </div>
 
-    <button [disabled]="!formulario.valid" mat-button color="primary">Adicionar</button>
-</form>
+                <button [disabled]="!formulario.valid" mat-button color="primary">Adicionar</button>
+            </form>
+        </mat-card>
+    </mat-tab>
+</mat-tab-group>
