--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -1,10 +1,21 @@
 <mat-toolbar>
-    Contatos
+    <mat-icon>account_circle</mat-icon>
+Contatos
 </mat-toolbar>
 
 <mat-tab-group>
-    <mat-tab label="Todos"></mat-tab>
-    <mat-tab label="Novo">
+    <mat-tab>
+        <ng-template mat-tab-label>
+            <mat-icon>list</mat-icon>
+            Todos
+        </ng-template>
+
+    </mat-tab>
+    <mat-tab>
+        <ng-template mat-tab-label>
+            <mat-icon>face</mat-icon>
+            Novo
+        </ng-template>
         <mat-card class="half-width">
             <mat-card-title>Novo contato</mat-card-title>
             <form [formGroup]="formulario" (ngSubmit)="submit()">
