--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -10,6 +10,33 @@ Contatos
             Todos
         </ng-template>
 
+        <mat-card>
+            <table mat-table [dataSource]="contatos" class="full-width">
+                <ng-container matColumnDef="id">
+                    <th mat-header-cell *matHeaderCellDef> ID </th>
+                    <td mat-cell *matCellDef="let contato"> {{contato.id}}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="nome">
+                    <th mat-header-cell *matHeaderCellDef> Nome </th>
+                    <td mat-cell *matCellDef="let contato"> {{contato.nome}}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="email">
+                    <th mat-header-cell *matHeaderCellDef> Email </th>
+                    <td mat-cell *matCellDef="let contato"> {{contato.email}}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="favorito">
+                    <th mat-header-cell *matHeaderCellDef> Favorito </th>
+                    <td mat-cell *matCellDef="let contato"> {{contato.favorito}}</td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="colunas"></tr>
+                <td mat-row *matRowDef="let row; columns: colunas;"></td>
+            </table>
+        </mat-card>
+
     </mat-tab>
     <mat-tab>
         <ng-template mat-tab-label>
