--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -29,11 +29,13 @@ Contatos
 
                 <ng-container matColumnDef="favorito">
                     <th mat-header-cell *matHeaderCellDef> Favorito </th>
-                    <td mat-cell *matCellDef="let contato"> {{contato.favorito}}</td>
+                    <td mat-cell *matCellDef="let contato">
+                      <mat-icon>{{ contato.favorito ? 'favorite' : 'favorite_border'}}</mat-icon>
+                    </td>
                 </ng-container>
 
                 <tr mat-header-row *matHeaderRowDef="colunas"></tr>
-                <td mat-row *matRowDef="let row; columns: colunas;"></td>
+                <tr mat-row *matRowDef="let row; columns: colunas;"></tr>
             </table>
         </mat-card>
 
