--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -1,74 +1,76 @@
 <mat-toolbar>
-    <mat-icon>account_circle</mat-icon>
-Contatos
+  <mat-icon>account_circle</mat-icon>
+  Contatos
 </mat-toolbar>
 
 <mat-tab-group>
-    <mat-tab>
-        <ng-template mat-tab-label>
-            <mat-icon>list</mat-icon>
-            Todos
-        </ng-template>
+  <mat-tab>
+    <ng-template mat-tab-label>
+      <mat-icon>list</mat-icon>
+      Todos
+    </ng-template>
 
-        <mat-card>
-            <table mat-table [dataSource]="contatos" class="full-width">
-                <ng-container matColumnDef="id">
-                    <th mat-header-cell *matHeaderCellDef> ID </th>
-                    <td mat-cell *matCellDef="let contato"> {{contato.id}}</td>
-                </ng-container>
+    <mat-card>
+      <table mat-table [dataSource]="contatos" class="full-width">
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef> ID </th>
+          <td mat-cell *matCellDef="let contato"> {{contato.id}}</td>
+        </ng-container>
 
-                <ng-container matColumnDef="nome">
-                    <th mat-header-cell *matHeaderCellDef> Nome </th>
-                    <td mat-cell *matCellDef="let contato"> {{contato.nome}}</td>
-                </ng-container>
+        <ng-container matColumnDef="nome">
+          <th mat-header-cell *matHeaderCellDef> Nome </th>
+          <td mat-cell *matCellDef="let contato"> {{contato.nome}}</td>
+        </ng-container>
 
-                <ng-container matColumnDef="email">
-                    <th mat-header-cell *matHeaderCellDef> Email </th>
-                    <td mat-cell *matCellDef="let contato"> {{contato.email}}</td>
-                </ng-container>
+        <ng-container matColumnDef="email">
+          <th mat-header-cell *matHeaderCellDef> Email </th>
+          <td mat-cell *matCellDef="let contato"> {{contato.email}}</td>
+        </ng-container>
 
-                <ng-container matColumnDef="favorito">
-                    <th mat-header-cell *matHeaderCellDef> Favorito </th>
-                    <td mat-cell *matCellDef="let contato">
-                      <mat-icon>{{ contato.favorito ? 'favorite' : 'favorite_border'}}</mat-icon>
-                    </td>
-                </ng-container>
+        <ng-container matColumnDef="favorito">
+          <th mat-header-cell *matHeaderCellDef> Favorito </th>
+          <td mat-cell *matCellDef="let contato">
+            <a href="#" (click)="favoritar(contato)">
+              <mat-icon>{{ contato.favorito ? 'favorite' : 'favorite_border'}}</mat-icon>
+            </a>
+          </td>
+        </ng-container>
 
-                <tr mat-header-row *matHeaderRowDef="colunas"></tr>
-                <tr mat-row *matRowDef="let row; columns: colunas;"></tr>
-            </table>
-        </mat-card>
+        <tr mat-header-row *matHeaderRowDef="colunas"></tr>
+        <tr mat-row *matRowDef="let row; columns: colunas;"></tr>
+      </table>
+    </mat-card>
 
-    </mat-tab>
-    <mat-tab>
-        <ng-template mat-tab-label>
-            <mat-icon>face</mat-icon>
-            Novo
-        </ng-template>
-        <mat-card class="half-width">
-            <mat-card-title>Novo contato</mat-card-title>
-            <form [formGroup]="formulario" (ngSubmit)="submit()">
-                <mat-form-field class="full-width">
-                    <mat-label>Nome:</mat-label>
-                    <input matInput placeholder="Digite seu nome: " formControlName="nome">
-                </mat-form-field>
+  </mat-tab>
+  <mat-tab>
+    <ng-template mat-tab-label>
+      <mat-icon>face</mat-icon>
+      Novo
+    </ng-template>
+    <mat-card class="half-width">
+      <mat-card-title>Novo contato</mat-card-title>
+      <form [formGroup]="formulario" (ngSubmit)="submit()">
+        <mat-form-field class="full-width">
+          <mat-label>Nome:</mat-label>
+          <input matInput placeholder="Digite seu nome: " formControlName="nome">
+        </mat-form-field>
 
-                <div *ngIf="formulario.controls.nome.errors">
-                    <div *ngIf="formulario.controls.nome.errors.required">Nome obrigatório!</div>
-                </div>
+        <div *ngIf="formulario.controls.nome.errors">
+          <div *ngIf="formulario.controls.nome.errors.required">Nome obrigatório!</div>
+        </div>
 
-                <mat-form-field class="full-width">
-                    <mat-label>Email:</mat-label>
-                    <input matInput placeholder="Digite seu email: " formControlName="email">
-                </mat-form-field>
+        <mat-form-field class="full-width">
+          <mat-label>Email:</mat-label>
+          <input matInput placeholder="Digite seu email: " formControlName="email">
+        </mat-form-field>
 
-                <div *ngIf="formulario.controls.email.errors">
-                    <div *ngIf="formulario.controls.email.errors.required">Email obrigatório!</div>
-                    <div *ngIf="formulario.controls.email.errors.email">Email inválido!</div>
-                </div>
+        <div *ngIf="formulario.controls.email.errors">
+          <div *ngIf="formulario.controls.email.errors.required">Email obrigatório!</div>
+          <div *ngIf="formulario.controls.email.errors.email">Email inválido!</div>
+        </div>
 
-                <button [disabled]="!formulario.valid" mat-button color="primary">Adicionar</button>
-            </form>
-        </mat-card>
-    </mat-tab>
+        <button [disabled]="!formulario.valid" mat-button color="primary">Adicionar</button>
+      </form>
+    </mat-card>
+  </mat-tab>
 </mat-tab-group>
