--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -69,7 +69,7 @@
           <div *ngIf="formulario.controls.email.errors.email">Email inválido!</div>
         </div>
 
-        <button [disabled]="!formulario.valid" mat-button color="primary">Adicionar</button>
+        <button [disabled]="!formulario.valid"  mat-raised-button color="primary">Adicionar</button>
       </form>
     </mat-card>
   </mat-tab>
