--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -12,6 +12,14 @@
 
     <mat-card>
       <table mat-table [dataSource]="contatos" class="full-width">
+
+        <ng-container matColumnDef="foto">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let contato">
+            <input type="file" name="foto" (change)="uploadFoto($event, contato)">
+          </td>
+        </ng-container>
+
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef> ID </th>
           <td mat-cell *matCellDef="let contato"> {{contato.id}}</td>
