--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -16,7 +16,13 @@
         <ng-container matColumnDef="foto">
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let contato">
-            <input type="file" name="foto" (change)="uploadFoto($event, contato)">
+              <div *ngIf="contato.foto">
+                <img width="50px" height="50px"
+                     src="data:image/png;base64,{{contato.foto}}" alt="{{contato.nome}}"/>
+              </div>
+              <div *ngIf="!contato.foto">
+                <input type="file" name="foto" (change)="uploadFoto($event, contato)">
+              </div>
           </td>
         </ng-container>
 
