Visualizando detalhe do contato

--- a/src/app/contato-detalhe/contato-detalhe.component.html
+++ b/src/app/contato-detalhe/contato-detalhe.component.html
@@ -4,23 +4,20 @@
       <mat-icon>face</mat-icon>
       Contato
     </mat-card-title>
-    <img mat-card-image
-      src="data:image/png;base64,{{contato.foto}}"
-
-    />
   </mat-card-header>
+  <img mat-card-image class="foto" src="data:image/png;base64,{{contato.foto}}" />
 
   <mat-card-content>
     <p>
       <strong>
-        {{contato.nome}}<br/>
+        {{contato.nome}}<br />
         {{contato.email}}
       </strong>
     </p>
   </mat-card-content>
 
   <mat-card-actions>
-    <button mat-raised-button color="primary" click="fechar()">Fechar</button>
+    <button mat-raised-button color="primary" (click)="fechar()">Fechar</button>
   </mat-card-actions>
 
 </mat-card>
