--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -53,6 +53,13 @@
         <tr mat-header-row *matHeaderRowDef="colunas"></tr>
         <tr mat-row *matRowDef="let row; columns: colunas;"></tr>
       </table>
+      <mat-paginator  [length]="totalElements"
+                      [pageSize] = "tamanho"
+                      [pageSizeOptions]="pageSizeOptions"
+                      (page)="paginar($event)"
+                      >
+      </mat-paginator>
+
     </mat-card>
 
   </mat-tab>
