--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -76,7 +76,7 @@
           <input matInput placeholder="Digite seu nome: " formControlName="nome">
         </mat-form-field>
 
-        <div *ngIf="formulario.controls.nome.errors">
+        <div *ngIf="formulario.controls.nome.errors && !formulario.controls.nome.pristine">
           <div *ngIf="formulario.controls.nome.errors.required">Nome obrigatório!</div>
         </div>
 
@@ -85,7 +85,7 @@
           <input matInput placeholder="Digite seu email: " formControlName="email">
         </mat-form-field>
 
-        <div *ngIf="formulario.controls.email.errors">
+        <div *ngIf="formulario.controls.email.errors && !formulario.controls.email.pristine">
           <div *ngIf="formulario.controls.email.errors.required">Email obrigatório!</div>
           <div *ngIf="formulario.controls.email.errors.email">Email inválido!</div>
         </div>
